--- a/frontend-daylight/tsconfig.json
+++ b/frontend-daylight/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-, "src/app/reset-password"  ],
+, "src/app/auth/reset-password"  ],
   "exclude": ["node_modules"]
 }
