--- a/backend-daylight/package.json
+++ b/backend-daylight/package.json
@@ -23,6 +23,7 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "ts-node prisma/seed.ts",
     "prisma:events": "ts-node prisma/seed-events.ts",
+    "prisma:paymentMethods": "ts-node prisma/seed-paymentMethods.ts",
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
@@ -35,6 +36,7 @@
     "@nestjs/platform-express": "^11.1.8",
     "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.19.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
