--- a/backend-daylight/package.json
+++ b/backend-daylight/package.json
@@ -44,6 +44,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
