feat: add subscription management features including checkout and active plans display
- Implemented SubscriptionCheckoutPage for handling subscription payments.
- Created SubscriptionsPage to display available subscription plans and current subscriptions.
- Developed hooks for fetching subscription plans and user subscriptions.
- Added subscription service for API interactions related to subscriptions.
- Defined types for subscription plans and user subscriptions.

--- a/backend-daylight/package.json
+++ b/backend-daylight/package.json
@@ -24,6 +24,7 @@
     "prisma:seed": "ts-node prisma/seed.ts",
     "prisma:events": "ts-node prisma/seed-events.ts",
     "prisma:paymentMethods": "ts-node prisma/seed-paymentMethods.ts",
+    "prisma:subscriptions": "ts-node prisma/seed-subscriptions.ts",
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
