feat: implement archetype detail management
- Added ArchetypeDetailController for handling CRUD operations on archetype details.
- Created ArchetypeDetailService to interact with the database using Prisma.
- Implemented DTOs for querying and updating archetype details.
- Developed frontend components for displaying and editing archetype details, including a data table and dialogs.
- Integrated hooks for managing API calls and state in the frontend.
- Added seeding functionality to populate initial archetype details.

--- a/backend-daylight/package.json
+++ b/backend-daylight/package.json
@@ -25,6 +25,7 @@
     "prisma:events": "ts-node prisma/seed-events.ts",
     "prisma:paymentMethods": "ts-node prisma/seed-paymentMethods.ts",
     "prisma:subscriptions": "ts-node prisma/seed-subscriptions.ts",
+    "prisma:archetypeDetails": "ts-node prisma/seed-archetypeDetails.ts",
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
