--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,6 @@
 name: Deploy to Production
 
+# Trigger: Jalan setiap kali ada push ke branch production
 on:
   push:
     branches: [ production ]
@@ -11,6 +12,7 @@ jobs:
     
     steps:
     - name: Executing remote ssh commands
+      # Kita menggunakan action pihak ketiga yang populer untuk SSH
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.VPS_HOST }}
@@ -18,21 +20,6 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: 22
         script: |
-          # --- FIX START: LOAD ENVIRONMENT ---
-          # Load NVM (Node Version Manager) jika pakai NVM
-          export NVM_DIR="$HOME/.nvm"
-          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-          
-          # Atau load .bashrc / .profile agar path pnpm terbaca
-          source ~/.bashrc || source ~/.profile
-          
-          # Tambahkan path manual pnpm (opsional, jika cara di atas gagal)
-          # export PATH=$PATH:/home/${{ secrets.VPS_USER }}/.local/share/pnpm
-          
-          # Hentikan script jika ada command yang error (PENTING!)
-          set -e
-          # --- FIX END ---
-
           # 1. Masuk ke folder project utama
           cd daylight
 
@@ -45,6 +32,7 @@ jobs:
           pnpm install            
           pnpm prisma generate     
           
+          # Jalankan migrasi database (aman dijalankan meski tidak ada perubahan)
           echo "🗄️ Migrating Database..."
           pnpm prisma migrate deploy
 
