--- a/backend-daylight/package.json
+++ b/backend-daylight/package.json
@@ -58,6 +58,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
   },
