--- a/frontend-daylight/package.json
+++ b/frontend-daylight/package.json
@@ -49,6 +49,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
+    "react-icons": "^5.5.0",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
