--- a/backend-daylight/package.json
+++ b/backend-daylight/package.json
@@ -45,6 +45,7 @@
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie": "^1.1.1",
     "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
@@ -59,6 +60,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sanitize-html": "^2.17.0",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "ua-parser-js": "^2.0.6",
@@ -71,6 +73,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/bcryptjs": "^3.0.0",
+    "@types/cookie": "^1.0.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/exceljs": "^1.3.2",
     "@types/express": "^5.0.0",
@@ -81,6 +84,7 @@
     "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/sanitize-html": "^2.16.0",
     "@types/socket.io": "^3.0.2",
     "@types/supertest": "^6.0.2",
     "@types/ua-parser-js": "^0.7.39",
