--- a/backend-daylight/package.json
+++ b/backend-daylight/package.json
@@ -26,6 +26,7 @@
     "prisma:paymentMethods": "ts-node prisma/seed-paymentMethods.ts",
     "prisma:subscriptions": "ts-node prisma/seed-subscriptions.ts",
     "prisma:archetypeDetails": "ts-node prisma/seed-archetypeDetails.ts",
+    "prisma:locations": "ts-node prisma/seed-locations.ts",
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
