--- a/backend-daylight/package.json
+++ b/backend-daylight/package.json
@@ -65,7 +65,8 @@
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "ua-parser-js": "^2.0.6",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "xendit-node": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -80,7 +81,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.19.1",
     "@types/nodemailer": "^7.0.3",
     "@types/passport-google-oauth20": "^2.0.17",
     "@types/passport-jwt": "^4.0.1",
