--- a/backend-daylight/package.json
+++ b/backend-daylight/package.json
@@ -21,8 +21,10 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
+    "prisma:all": "ts-node prisma/seed-all.ts",
     "prisma:seed": "ts-node prisma/seed.ts",
     "prisma:events": "ts-node prisma/seed-events.ts",
+    "prisma:partners": "ts-node prisma/seed-partners.ts",
     "prisma:paymentMethods": "ts-node prisma/seed-paymentMethods.ts",
     "prisma:xenditPaymentMethods": "ts-node prisma/seed-xenditPaymentMethods.ts",
     "prisma:subscriptions": "ts-node prisma/seed-subscriptions.ts",
